<resources>
    <string name="app_name">猫眼电影</string>

    <!--TabLayout标题-->
    <string name="movie">电影</string>
    <string name="cinema">影院</string>
    <string name="mine">我的</string>
    <string name="dalian">大连</string>
    <string name="hotShow">热映</string>
    <string name="have_on_point">暂无评分</string>
    <string name="area_hint">请输入关键字</string>
    <string name="create_qr_code">生成二维码</string>
    <string name="show_qr_code">显示二维码图片</string>
    <string name="map_star_map">标准地图</string>
    <string name="map_standard_map">标准地图</string>
    <string name="map_search">搜索</string>
    <string name="map_search_hint">请输入搜索关键字</string>
    <string name="mine_login_hint">立即登录</string>
    <string name="mine_want_watch">想看</string>
    <string name="mine_watched">看过</string>
    <string name="mine_discuss">影评</string>
    <string name="mine_topic">话题</string>
    <string name="mine_my_order">我的订单</string>
    <string name="mine_setting">不同Button</string>
    <string name="mine_my_money">我的指南</string>
    <string name="mine_my_money_bag">手势解锁</string>
    <string name="mine_setting_vip">关灯游戏</string>
    <string name="mine_setting_collect">碎屏效果</string>
    <string name="mine_order_back_money">水滴刷新</string>
    <string name="mine_order_discuss">待评价</string>
    <string name="mine_order_pay">待付款</string>
    <string name="mine_order_no_buy">未消费</string>
    <string name="mine_order_all">全部</string>
    <string name="movie_pro_tv">专业</string>
    <string name="movie_item_aud_tv">观众</string>
    <string name="please_input">请输入要写入二维码的内容</string>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
    <string name="intell_bd_title">智能播报</string>
    <string name="app_id">11111111</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>

    <string name="cinema_price_start">元起</string>
    <string name="have_add_one">已添加一张</string>
    <string name="to_payment">至待付款</string>
    <string name="yuan">元</string>


    <!--下面是支付-->
    <string name="order">订单</string>
    <string name="commodity">商品</string>
    <string name="amount">总金额</string>
    <string name="details">商品详情</string>
    <string name="payment">支付</string>
    <string name="notify_url">notifyUrl</string>
    <string name="input_commodity">请输入商品名称</string>
    <string name="input_amount">请输入总金额</string>
    <string name="input_details">请输入商品详情</string>
    <string name="input_notify_url">请输入notifyUrl</string>
    <string name="normal_model">正常模式</string>
    <string name="front_model_activity">前置模式Activity</string>
    <string name="front_model_dialog">前置模式Dialog</string>
    <string name="custom_rsa">自定义RSA</string>
    <string name="alipay">支付宝</string>
    <string name="wxpay">微信支付</string>
    <string name="bdpay">百度钱包</string>
    <string name="unionpay">银联支付</string>
    <string name="jdpay">京东钱包</string>
    <string name="play_dec">导演: </string>
    <string name="play_kinds">影片类型: </string>
    <string name="play_in_china">大陆上映: </string>
    <string name="have_no_net">当前无网络连接</string>
    <string name="wifi">当前是无线网络状态</string>
    <string name="data">当前是移动数据网络是否播放</string>
    <string name="map">地图</string>
    <string name="map_local">定位</string>
    <!--解锁-->
    <string name="action_settings">Settings</string>

    <!--button-->
    <string name="Upload">Upload</string>
    <string name="Error">Error</string>
    <string name="Complete">Complete</string>
    <string name="IndeterminateProgressSample">Indeterminate Progress Sample</string>
    <string name="IntegerProgressSample">Integer Progress Sample</string>
    <string name="StateChangeSample">State Change Sample</string>
    <string name="ProgressPaddingSample">Progress Padding Sample</string>
    <string name="CustomSelectorSample">Custom Selector Sample</string>
    <string name="breakwindow">长按碎屏</string>
    <string name="refesh_water">水滴刷新</string>
    <string name="close_light_game">关灯游戏</string>
    <string name="deblocking_gesture">手势解锁</string>
    <string name="mine_compass">指南针</string>


</resources>
