<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mine_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_login_height"
        android:background="@color/mine_login_bg"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/mine_login_icon"
            android:layout_width="@dimen/mine_login_icon"
            android:layout_height="@dimen/mine_login_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/mine_login_icon_left"
            android:src="@mipmap/login_icon" />

        <TextView
            android:id="@+id/mine_login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/mine_login_icon_left"
            android:text="@string/mine_login_hint"
            android:textSize="@dimen/mine_login_hint_size"
            android:textColor="@color/mine_login_hint_color"/>

        <ImageView
            android:layout_width="@dimen/weight_zero"
            android:layout_height="@dimen/mine_login_icon_left"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/mine_login_arrow_right"
            android:layout_weight="1"
            android:paddingLeft="@dimen/mine_login_arrow_left"
            android:src="@mipmap/gotoload" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_ll_height"
        android:background="@color/mine_login_hint_color"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mine_want_watch"
            android:layout_width="@dimen/weight_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/mine_iv_height"
                android:src="@mipmap/myheard"
                android:layout_marginTop="@dimen/mine_iv_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/weight_zero"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mine_want_watch"
                android:textColor="@color/text_color_black" />

        </LinearLayout>
        <View
            android:layout_width="@dimen/mine_view_width"
            android:layout_height="@dimen/mine_view_height"
            android:background="@color/mine_view_bg"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/mine_watched"
            android:layout_width="@dimen/weight_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/mine_iv_height"
                android:src="@mipmap/myeye"
                android:layout_marginTop="@dimen/mine_iv_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/weight_zero"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mine_watched"
                android:textColor="@color/text_color_black" />

        </LinearLayout>
        <View
            android:layout_width="@dimen/mine_view_width"
            android:layout_height="@dimen/mine_view_height"
            android:background="@color/mine_view_bg"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/mine_discuss"
            android:layout_width="@dimen/weight_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/mine_iv_height"
                android:src="@mipmap/mymovietalk"
                android:layout_marginTop="@dimen/mine_iv_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/weight_zero"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mine_discuss"
                android:textColor="@color/text_color_black" />

        </LinearLayout>
        <View
            android:layout_width="@dimen/mine_view_width"
            android:layout_height="@dimen/mine_view_height"
            android:background="@color/mine_view_bg"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/mine_topic"
            android:layout_width="@dimen/weight_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/mine_iv_height"
                android:src="@mipmap/mytopic"
                android:layout_marginTop="@dimen/mine_iv_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/weight_zero"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mine_topic"
                android:textColor="@color/text_color_black" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_order_height"
        android:layout_marginTop="@dimen/mine_order_margin_top"
        android:background="@color/mine_login_hint_color"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/mine_order_tv_left"
            android:text="@string/mine_my_order"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/area_edit_text_size" />

        <TextView
            android:id="@+id/mine_all"
            android:layout_width="@dimen/weight_zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/mine_order_tv_left"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/mine_order_all"
            android:textSize="@dimen/map_tv_size" />

        <ImageView
            android:layout_width="@dimen/mine_login_icon_left"
            android:layout_height="match_parent"
            android:src="@mipmap/gotoload" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_login_icon"
        android:layout_marginTop="@dimen/mine_setting_top"
        android:background="@color/mine_login_hint_color"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mine_order_no_buy"
            android:layout_width="@dimen/weight_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/mine_iv_height"
                android:src="@mipmap/nopay"
                android:layout_marginTop="@dimen/mine_order_iv_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/weight_zero"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mine_order_no_buy"
                android:textColor="@color/text_color_black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/order_pay"
            android:layout_width="@dimen/weight_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/mine_iv_height"
                android:src="@mipmap/willpay"
                android:layout_marginTop="@dimen/mine_order_iv_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/weight_zero"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mine_order_pay"
                android:textColor="@color/text_color_black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mine_order_discuss"
            android:layout_width="@dimen/weight_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/mine_iv_height"
                android:src="@mipmap/willtalk"
                android:layout_marginTop="@dimen/mine_order_iv_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/weight_zero"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mine_order_discuss"
                android:textColor="@color/text_color_black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mine_back_money"
            android:layout_width="@dimen/weight_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/mine_iv_height"
                android:src="@mipmap/moneyback"
                android:layout_marginTop="@dimen/mine_order_iv_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/weight_zero"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mine_order_back_money"
                android:textColor="@color/text_color_black" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_collect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_order_height"
        android:layout_marginTop="@dimen/mine_order_margin_top"
        android:background="@color/mine_login_hint_color"
        android:orientation="horizontal">

        <TextView
            style="@style/mine_item_setting_tv"
            android:layout_marginLeft="@dimen/mine_order_tv_left"
            android:text="@string/mine_setting_collect" />

        <ImageView
            style="@style/mine_item_setting_iv"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_vip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_order_height"
        android:layout_marginTop="@dimen/mine_setting_top"
        android:background="@color/mine_login_hint_color"
        android:orientation="horizontal">

        <TextView
            style="@style/mine_item_setting_tv"
            android:layout_marginLeft="@dimen/mine_order_tv_left"
            android:text="@string/mine_setting_vip" />

        <ImageView
            style="@style/mine_item_setting_iv"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_bag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_order_height"
        android:layout_marginTop="@dimen/mine_setting_top"
        android:background="@color/mine_login_hint_color"
        android:orientation="horizontal">

        <TextView
            style="@style/mine_item_setting_tv"
            android:layout_marginLeft="@dimen/mine_order_tv_left"
            android:text="@string/mine_my_money_bag" />

        <ImageView
            style="@style/mine_item_setting_iv"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_little_money"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_order_height"
        android:layout_marginTop="@dimen/mine_setting_top"
        android:background="@color/mine_login_hint_color"
        android:orientation="horizontal">

        <TextView
            style="@style/mine_item_setting_tv"
            android:layout_marginLeft="@dimen/mine_order_tv_left"
            android:text="@string/mine_my_money" />

        <ImageView
            style="@style/mine_item_setting_iv"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_order_height"
        android:layout_marginTop="@dimen/mine_setting_top"
        android:background="@color/mine_login_hint_color"
        android:orientation="horizontal">

        <TextView
            style="@style/mine_item_setting_tv"
            android:layout_marginLeft="@dimen/mine_order_tv_left"
            android:text="@string/mine_setting" />

        <ImageView
            style="@style/mine_item_setting_iv"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>