<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/main_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="搜索"/>
    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.amap.api.maps.MapView>
    <TextView
        android:id="@+id/location_errInfo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:textOff="@string/map_standard_map"
        android:textOn="@string/map_star_map"
        android:onClick="false"/>
        <RelativeLayout
            android:id="@+id/search_bar_layout"
            android:layout_toRightOf="@id/toggle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/map_rl_height"
            android:layout_marginLeft="@dimen/map_rl_margin"
            android:layout_marginRight="@dimen/map_rl_margin"
            android:layout_marginStart="@dimen/map_rl_margin"
            android:layout_marginTop="@dimen/map_rl_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/offlinearrow_tab2_pressed"
                android:clickable="true"
                android:gravity="center"
                android:paddingEnd="@dimen/map_tv_padding"
                android:paddingLeft="@dimen/map_tv_padding"
                android:paddingRight="@dimen/map_tv_padding"
                android:paddingStart="@dimen/map_tv_padding"
                android:text="@string/map_search"
                android:textColor="@color/title_bar_tv_color"
                android:textSize="@dimen/map_tv_size"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/btn_search"
                android:layout_toStartOf="@+id/btn_search"
                android:background="@drawable/search_input_half"
                android:clickable="true"
                android:gravity="center_vertical" >


                <EditText
                    android:id="@+id/input_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/search_input"
                    android:background="@color/transparent"
                    android:hint="@string/map_search_hint"
                    android:textColorHint="@color/sbc_header_text"
                    android:singleLine="true"
                    android:textColor="@color/sbc_snippet_text"
                    android:textSize="@dimen/map_et_size" />
            </LinearLayout>
        </RelativeLayout>

=======
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/red"
        android:textColor="@color/darkgrey"
        android:text="TextView"
        android:visibility="gone"/>
>>>>>>> feature/姜鑫

    <RadioGroup
        android:id="@+id/gps_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/gps_locate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="定位"
            android:textColor="@android:color/black" />
    </RadioGroup>
</RelativeLayout>
